--- a/src/components/SignUp/SignUp.scss
+++ b/src/components/SignUp/SignUp.scss
@@ -3,10 +3,10 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-bottom: 115px;
   &-header {
     font-size: 24px;
     padding-bottom: 25px;
+    
     span {
       font-style: italic;
       font-weight: 600;
